# crankvm

./: .clang_complete  CMakeLists.txt  LICENSE
app/: CMakeLists.txt  main.c
build-scripts/: generateTables.py
definitions/: SistaV1BytecodeSet.json  SqueakV3PlusClosuresBytecodeSet.json
include/crank-vm/: arch.h  assert.h  common.h  context.h  crank-vm.h  error.h  interpreter.h  objectmodel.h  oop.h  special-objects.h  system-primitive-number.h
scripts/: SmalltalkImage-newSpecialObjectsArray.st  buildBytecodeTables.sh  buildPrimitiveTable.py  generatePrimitiveTable.sh  makeBytecodeTable.py
vm/: CMakeLists.txt  SistaV1BytecodeSetDispatchTable.inc  SistaV1BytecodeSetTable.inc  SqueakV3PlusClosuresBytecodeSetDispatchTable.inc  SqueakV3PlusClosuresBytecodeSetTable.inc  arithmetic-primitives.c  arithmetic-primitives.h  block-primitives.c  block-primitives.h  context-internal.h  context.c  error.c  external-primitives.c  external-primitives.h  heap.c  heap.h  image.c  image.h  interpreter-internal.h  interpreter.c  message-primitives.c  message-primitives.h  numbered-primitives.c  numbered-primitives.h  object-model.c  object-primitives.c  object-primitives.h  quick-method-primitives.h  read-memory-stream.h  scheduling-primitives.c  scheduling-primitives.h  special-objects.c  system-primitives.c  system-primitives.h
vm/internal-plugins/: file-plugin.c
